@@ -74,6 +74,7 @@ font/devpdf/util/BuildFoundries: \
 	     sed -f $(SH_DEPS_SED_SCRIPT) \
 	         -e "s|/usr/bin/perl|$(PERL)|" \
 	         -e "s|[@]GROFF_GHOSTSCRIPT_INTERPRETERS[@]|$(GHOSTSCRIPT)|" \
+	         -e "s|[@]PATH_SEPARATOR[@]|$(PATH_SEPARATOR)|" \
 	         -e "s|[@]VERSION[@]|$(VERSION)|" \
 	         -e "s|[@]GROFF_FONT_DIR[@]|$(fontdir)|" \
 	         $(devpdf_srcdir)/util/BuildFoundries.pl \
